<resources>
    <string name="app_name">掌上安监</string>
    <string name="logo_userName">请输入帐号</string>
    <string name="phone_number">请输入手机号</string>
    <string name="phone_password">请输入验证码</string>
    <string name="login">登录</string>
    <string name="logo_passWordName">请输入密码</string>
    <string name="report_dealgrade">检查设备：</string>
    <string name="report_dealcategory">设备负责队：</string>
    <string name="report_department">设备排查人：</string>
    <string name="report_facategory">设备检查项：</string>
    <string name="report_faname">设备问题项：</string>
    <string name="detail_problem">设备问题：</string>
    <string name="report_pbtype">设备问题项：</string>
    <string name="report_facility">设施材料：</string>
    <string name="report_fasize">材料规格：</string>
    <string name="report_roadname">设备位置：</string>
    <string name="member_title">会员</string>
    <string name="supervise">监管</string>
    <string name="supervise_first">日常管理</string>
    <string name="supervise_second">精细化管理</string>
    <string name="me">个人中心</string>
    <string name="report_tv_press_audio">按住说话</string>
    <string name="report_tv_record">重录</string>
    <string name="app_tip">提示</string>
    <string name="report_tip">请选择问题项</string>
    <string name="personsign_tip">请选择人员</string>
    <string name="play_video">视频播放</string>
    <string name="morningsign">早会签到</string>
    <string name="trainsign">培训签到</string>
    <string name="meetingsign">会议签到</string>
    <string name="reportimg">排查图片：</string>
    <string name="locationdes">位置描述：</string>
    <string name="myreport_title">设备问题明细</string>
    <string name="reprote_task">我的排查任务</string>
    <string name="reprote">排查</string>
    <string name="updata">提交</string>
    <string name="review">检查</string>
    <string name="send">审批</string>
    <string name="deal">整改</string>
    <string name="post">处置</string>
    <string name="check">验收</string>
    <string name="home_scan">扫码上报</string>
    <string name="processdetail">设备检查流程</string>
    <string name="problem_detail">设备检查</string>
    <string name="maintenance">设备检查</string>
    <string name="bottom_first">首页</string>
    <string name="bottom_second">供应链</string>
    <string name="bottom_thrid">监管</string>
    <string name="bottom_fifth">我的</string>
    <string name="personreport">我要举报</string>
    <string name="historyreport">历史举报</string>
    <string name="howreport">如何举报</string>
    <string name="howtoreport">如何进行举报</string>
    <string name="howreportetitle">1、请按以下八类病害举报：道路设施、交通设施、桥梁设施、照明设施、公共设施、排水设施、河道设施、城市环境。\n
2、上报期间请确保手机GPS处于开启状态，以便于更明确的反应上报事件事实性。\n
3、上报病害需要抓拍三张照片，确定病害图片一张，街道标牌一张，附近明显建筑物一张。\n
4、病害举报图片，要清晰反应病害性质、街道、病害地点和标志性建筑物。\n
5、禁止在骑行或驾车时上报操作，以免发生交通意外。\n
6、我们鼓励您参与实名举报病害信息行为，市政部门会保护举报人的个人隐私。\n</string>
    <string name="camera_tip">需要拍三张照片</string>
    <string name="camera_request_report">请点击上报</string>
    <string name="camera_play">已拍摄</string>
    <string name="camera_played">张照片</string>
    <string name="camera_photoresult">已拍摄3张照片,请点击上报</string>
    <string name="camera_photorequest">请拍满三张照片</string>
    <string name="personreporte_title">问题上报</string>
    <string name="personreporte_phone">上报人电话：</string>
    <string name="personreporte_name">上报人姓名：</string>
    <string name="personreporte_namehint">请输入姓名</string>
    <string name="personreporte_faci">上报设施：</string>
    <string name="personreporte_des">详细描述：</string>
    <string name="personreporte_photo">上报图片：</string>
    <string name="personreporte_loca">上报位置：</string>
    <string name="personreporte_commit">提交审核</string>
    <string name="personreporte_success">上报成功</string>
    <string name="personreporte_fail">网络异常</string>
    <string name="personreporte_commiting">正在上报···</string>
    <string name="person_reproted">此处已经上报过,谢谢</string>
    <string name="locating">正在定位···</string>
    <string name="loading">正在加载数据···</string>
    <string name="memeber_assiation">市政协会</string>
    <string name="memeber_bussiness">市政企业</string>
    <string name="memeber_company">集采企业</string>
    <string name="memeber_mid_title">企业会员</string>
    <string name="company_mid_title">产品服务</string>
    <string name="memeber_bottom_title">第三方服务</string>
    <string name="company_bottom_title">成功案例</string>
    <string name="table_top">掌上市政用户统计表</string>
    <string name="table_mid">掌上市政使用者数据</string>
    <string name="table_bottom">掌上市政用户分布</string>
    <string name="mine_sign">签到</string>
    <string name="mine_information">我的资料</string>
    <string name="mine_score">我的积分</string>
    <string name="for_us">关于我们</string>
    <string name="mine_update">软件更新</string>
    <string name="mine_share">软件分享</string>
    <string name="mine_appraise">软件评价</string>
    <string name="mine_exit">退出登录</string>
    <string name="companyname">北京向阳天科技有限公司</string>
    <string name="connacteus">全国财富招商热线：400-865-2007</string>
    <string name="information_name">姓名：</string>
    <string name="hint_name">请输入姓名</string>
    <string name="information_phone">手机号码：</string>
    <string name="information_department">所属部门：</string>
    <string name="socre_title_left">当前积分</string>
    <string name="socre_title_right">使用帮助</string>
    <string name="socre_title_sign">积分签到及兑换</string>
    <string name="socre_detail">积分明细</string>
    <string name="socre_sign_success">签到成功</string>
    <string name="save_success">保存成功</string>
    <string name="sign_title">签到及领奖</string>
    <string name="sign_simple">普通会员</string>
    <string name="sign_simple_standar">积分100+</string>
    <string name="sign_grent_standar">积分500+</string>
    <string name="sign_super_standar">积分1000+</string>
    <string name="sign_great">市政达人</string>
    <string name="sign_super">超级会员</string>
    <string name="sign_getprize">领取</string>
    <string name="prize_title">奖品领取</string>
    <string name="prize_commit">立即申请</string>
    <string name="signed">已签到</string>
    <string name="sign_tip">每天只能签一次</string>
    <string name="sign">签到</string>
    <string name="allreporter">排查人员：</string>
    <string name="problemlocation">设备位置：</string>
    <string name="reportertime">排查时间：</string>
    <string name="review_tv_detail">详细</string>
    <string name="review_tv_pass">通过</string>
    <string name="review_tv_fail">驳回</string>
    <string name="review_tv_nodata">未上报数据</string>
    <string name="input_number">手动输入设备号</string>
    <string name="open_light">打开手电筒</string>
    <string name="report_image">排查图片：</string>
    <string name="train_image">培训图片：</string>
    <string name="review_image">检查图片：</string>
    <string name="report_locaiton">具体描述：</string>
    <string name="report_problemdes">设备问题描述：</string>
    <string name="detail_advice">您的意见：</string>
    <string name="report_commit">提交</string>
    <string name="report_dialog_title">请选择</string>
    <string name="report_dialog_content1">拍照</string>
    <string name="report_upimg">正在上传图片···</string>
    <string name="report_uploading">开始上传</string>
    <string name="report_imgsuccess">图片上传成功</string>
    <string name="report_dialog_content2">相册</string>
    <string name="report_request">至少选择一张图片上报</string>
    <string name="report_notifica">上报一条新数据</string>
    <string name="report_notifica_title">：新上报一条数据</string>
    <string name="report_error">数据未获取，稍后重试</string>
    <string name="report_imageerror">图片未上报成功</string>
    <string name="report_uperror">数据未上传成功</string>
    <string name="report_success">数据上传成功</string>
    <string name="report_delete_title">删除录音</string>
    <string name="report_delete_video_title">删除视频</string>
    <string name="report_delete_content">确定删除录音?</string>
    <string name="report_delete_video_content">确定删除视频?</string>
    <string name="report_delete_ok">确定</string>
    <string name="report_delete_cancle">取消</string>
    <string name="report_record_little">录音时间太短</string>
    <string name="report_record_max">录音不能超过60s</string>
    <string name="audio_success">音频上传成功</string>
    <string name="video_success">视频上传成功</string>
    <string name="video_fail">视频上传失败</string>
    <string name="audio_fail">音频上传失败</string>
    <string name="disrecord">请先录音</string>
    <string name="reportmore">播放错误，请重录</string>
    <string name="reportlocation">请填写具体描述</string>
    <string name="add_video">添加视频</string>
    <string name="sign_team">签到团队：</string>
    <string name="sign_person">签到人员：</string>
    <string name="sign_picture">人员照片：</string>
    <string name="sign_strand">检查标准：</string>
    <string name="sign_up">提交</string>
    <string name="home_notnetwork">网络异常</string>
    <string name="home_refresh">刷新</string>
    <string name="review_nodata">未上报数据</string>
    <string name="deal_navi">导航</string>
    <string name="deal_nodata">没有需要您整改数据</string>
    <string name="check_nodata">没有需要您处置数据</string>
    <string name="send_request_time">要求时间</string>
    <string name="send_send">处置人</string>
    <string name="send_check">验收人</string>
    <string name="send_nodata">没有审批数据</string>
    <string name="check_ireport">排查前</string>
    <string name="check_irepair">维修后</string>
    <string name="check_report">排查人：</string>
    <string name="check_dealer">处置人：</string>
    <string name="check_detail_title">设备管理作业</string>
    <string name="check_detail_reviewer">审批人员：</string>
    <string name="check_detail_dealer">处置人员：</string>
    <string name="check_detail_reporttime">排查时间：</string>
    <string name="check_detail_reviewtime">检查时间：</string>
    <string name="check_detail_repair">维修备注：</string>
    <string name="check_detail_location">详细位置：</string>
    <string name="check_detail_requesttime">要求完成时间：</string>
    <string name="check_detail_resultetime">实际完成时间：</string>
    <string name="check_detail_ideal">处置前</string>
    <string name="check_detail_deali">处置后</string>
    <string name="process_tasknumer">任务单号：</string>
    <string name="process_report">排查人：</string>
    <string name="process_review">检查人：</string>
    <string name="process_deal">处置人：</string>
    <string name="process_check">验收人：</string>
    <string name="process_redeal">处置前照片</string>
    <string name="process_dealing">处置中照片</string>
    <string name="process_dealed">处置后照片</string>
    <string name="employee">职位：</string>
    <string name="employee_title">职称：</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">读取手机权限</string>
    <string name="permission_call_phone_hint">请打开电话权限</string>
    <string name="permission_camera_hint">请打开拍照权限</string>
    <string name="permission_access_fine_location_hint">请打开位置信息，提供定位信息</string>
    <string name="permission_access_coarse_location_hint">请打开位置信息，提供定位信息</string>
    <string name="permission_read_external_hint">请允许读取SD卡</string>
    <string name="permission_white_external_hint">请允许读写SD卡</string>
    <string name="permission_recode_audio_hint">请打开录音权限</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="uncheck_redeal">处置前：</string>
    <string name="uncheck_deal">处置中：</string>
    <string name="uncheck_dealed">处置后：</string>
    <string name="myreviewed">我的审核</string>
    <string name="myreviewed_nodata">您未审核过</string>
    <string name="mydealed">我的处置</string>
    <string name="mydealed_nodata">您未处置过</string>
    <string name="myreported_nodata">您未上报过</string>
    <string name="myreported">我的上报</string>
    <string name="alltitle">全国掌上市政上线人数：</string>
    <string name="personloca">人员定位</string>
    <string name="problemdeal">病害处置</string>
    <string name="facilitymanage">设施管理</string>
    <string name="personsign">人员签到</string>
    <string name="traintest">培训考试</string>
    <string name="trainphoto">培训照片</string>
    <string name="testcollect">成绩汇总</string>
    <string name="systemmanage">制度管理</string>
    <string name="contingencyplan">应急预案</string>
    <string name="supmeeting">会议纪要</string>
    <string name="table_nodata">数据未加载</string>
    <string name="table_top_title">掌上市政使用数据</string>
</resources>