<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allreporter"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_reporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="nihao"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dealgrade"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_facility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sscc"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_department"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_facility_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sscc"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dealcategory"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_facility_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sscc"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_roadname"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_facility_loca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sscc"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_problem"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_facility_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_uncheck_information"
                android:gravity="start|center_vertical"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_reviewer"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_reviewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="张三三"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_dealer"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_dealer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="王美丽"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_reporttime"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_reportetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017年3月2日16:45:06"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_reviewtime"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_reviewtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017年3月2日16:47:06"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_locaiton"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_check_problem_audio"
                    android:layout_width="120dp"
                    android:layout_height="28dp"
                    android:background="@drawable/selector_tv_audio"
                    android:drawableRight="@mipmap/play"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/tv_check_problem_loca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="位置描述"
                    android:textSize="18sp" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_problemdes"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_detail_diseasedes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="miaoshu"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_repair"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_decs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="王美丽"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_requesttime"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_requesttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017年3月2日19:47:06"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_detail_resultetime"
                android:textColor="@color/cc_text_blank"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_resulttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017年3月2日16:47:06"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="2dp"
            android:background="@color/cc_light_dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_detail_ideal"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/cc_light_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_detail_deali"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/cc_light_dark" />
        <!--第一段-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check_detail_report"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/cc_light_dark" />

            <ImageView
                android:id="@+id/iv_check_detail_dealed"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:scaleType="centerCrop" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/report_problemdes"
                android:textColor="@color/cc_text_blank"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_play_video"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="3dp"
                android:src="@mipmap/iv_video" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:id="@+id/tv_check_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_sendroad_tv"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/review_tv_pass"
                android:textColor="@color/cc_white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_check_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="@drawable/shape_sendroad_back"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/review_tv_fail"
                android:textColor="@color/cc_white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>



    </RelativeLayout>
</ScrollView>